[tool.poetry]
authors = ["Tony Wu <tonywu6@protonmail.com>"]
description = ""
license = "CC-BY-4.0"
name = "example-docs"
packages = []
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
myst-parser = "^2.0.0"
pydata-sphinx-theme = "^0.13.3"
python = ">=3.8.16, <3.11"
sphinx = "^6.2.1"
click = "^8.1.3"
sphinx-autodoc2 = "^0.4.2"
sphinx-autobuild = "^2021.3.14"
sphinx-togglebutton = "^0.3.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
